# reprompt

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: ci-release.yaml  ci.yaml
docs/: demo.webm
docs/logo/: reprompt-logo.html
src/: app.rs  lib.rs  main.rs  ollama.rs  prompt.rs  view.rs
